<resources>
    <string name="app_name">Vinfera</string>
    <string name="create_an_account_text">Create an Account!</string>
    <string name="lets_text">Let\'s get started</string>
    <string name="full_name_text">Full Name</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="remeber_me_text">Remember me</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="login_text">Login</string>
    <string name="dont_have_an_account_text">Don\'t have an account ? Sign up here</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="sign_up_text">Sign up</string>
    <string name="already_have_account">Already have an account? Sign in here</string>
    <string name="forgot_password_ins">Enter your email to reset your password.</string>
    <string name="send_link_text">Send Link</string>
    <string name="wineries_text">Wineries</string>
    <string name="view_all_text">View All</string>
    <string name="wine_text">Wines</string>
    <string name="TXT_LBL_DASHBOARD">Dashboard</string>

    //
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="require">Require</string>
    <string name="phone_number_length">Require</string>
    <string name="password_length">Min length is 8</string>

    //Error message or success message
    <string name="TXT_MSG_NETWORK">Please check your internet connection</string>
    <string name="TXT_MSG_COMMON_API_ERROR">Something went wrong</string>

    <string name="TXT_LBL_CATALOGUE">Catalogue</string>
    <string name="TXT_LBL_MY_CART">My Cart</string>
    <string name="TXT_LBL_MY_ORDERS">My Orders</string>
    <string name="TXT_LBL_MY_ADDRESS">My Address</string>
    <string name="TXT_LBL_PAYMENTMETHOD">Payment Methods</string>
    <string name="TXT_LBL_WINERIES">Wineries</string>
    <string name="TXT_LBL_FAQ">FAQ</string>
    <string name="TXT_LBL_LOGOUT">Logout</string>
</resources>