<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.enact.app.activity.login.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screenPadding"
    android:background="@android:color/white">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?actionBarSize"
        android:src="@drawable/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_text"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        android:layout_marginTop="?actionBarSize"
        android:fontFamily="@font/livvic_medium"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/titleTextSize"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtlets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_text"
        app:layout_constraintTop_toBottomOf="@id/txtCreate"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/livvic_regular"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/text_size_8"
        />

    <LinearLayout
        android:id="@+id/filedContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/txtlets">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            app:layout_constraintTop_toBottomOf="@id/txtCreate"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/livvic_regular"
            android:textColor="@color/textGrayColor"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_8"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:background="@drawable/edit_bg"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/mail"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@={viewModel.email}"
            error="@{viewModel.emailError}"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            app:layout_constraintTop_toBottomOf="@id/txtCreate"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/livvic_regular"
            android:textColor="@color/textGrayColor"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_8"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:background="@drawable/edit_bg"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/password"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/text_size_12"
            android:text="@={viewModel.password}"
            error="@{viewModel.passwordError}"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/filedContainer"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/remeber_me_text"
        android:checked="@{viewModel.rememberMe}"
        android:onClick="@{()->viewModel.setRememberMe()}"
        android:buttonTint="@color/redColor"
        android:textSize="@dimen/text_size_12"
        android:fontFamily="@font/livvic_medium"
        android:textColor="@color/textDarkGrayColor"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/livvic_medium"
        android:text="@string/forgot_password_text"
        android:onClick="@{()->viewModel.onClickForgotPassword()}"
        android:textColor="@color/textDarkGrayColor"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filedContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        app:layout_constraintTop_toBottomOf="@+id/rememberCheckBox"
        app:cornerRadius="@dimen/buttonCornerRadious"
        android:text="@string/login_text"
        android:onClick="@{()->viewModel.loginOnClick()}"
        android:textAllCaps="true"
        android:layout_marginTop="?actionBarSize"
        android:fontFamily="@font/livvic_medium"
        android:textSize="@dimen/text_size_12"
        android:shadowRadius="5.0"
        android:textColor="@color/whiteColor"
        android:backgroundTint="@color/redColor"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtNotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dont_have_an_account_text"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_10"
        android:fontFamily="@font/livvic_medium"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>