<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.enact.app.activity.forgot.ForgotViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screenPadding"
        android:background="@android:color/white">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="?actionBarSize"
            android:src="@drawable/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            app:layout_constraintTop_toBottomOf="@id/logoImage"
            android:layout_marginTop="?actionBarSize"
            android:fontFamily="@font/livvic_medium"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/titleTextSize"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_ins"
            app:layout_constraintTop_toBottomOf="@id/txtCreate"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/livvic_regular"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_8"
            />

        <LinearLayout
            android:id="@+id/filedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/txtInstruction">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                app:layout_constraintTop_toBottomOf="@id/txtCreate"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/livvic_regular"
                android:textColor="@color/textGrayColor"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/text_size_8"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editTextHeight"
                android:background="@drawable/edit_bg"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableStart="@drawable/mail"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@={viewModel.email}"
                error="@{viewModel.emailError}"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintTop_toTopOf="parent"
                />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendLinkButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            app:layout_constraintTop_toBottomOf="@+id/filedContainer"
            app:cornerRadius="@dimen/buttonCornerRadious"
            android:text="@string/send_link_text"
            android:textAllCaps="true"
            android:layout_marginTop="?actionBarSize"
            android:fontFamily="@font/livvic_medium"
            android:textSize="@dimen/text_size_12"
            android:onClick="@{()->viewModel.onClickForgotPassword()}"
            android:shadowRadius="5.0"
            android:textColor="@color/whiteColor"
            android:backgroundTint="@color/redColor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>